<package format="3">
  <name>f1tenth_stanley_controller</name>
  <version>0.1.0</version>
  <description>Stanley controller for F1TENTH using ROS 2</description>
  <maintainer email="your_email@domain.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ackermann_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>